--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "devDependencies": {
     "browser-sync": "^2.18.5",
     "gulp": "^3.9.1",
+    "gulp-cssnano": "^2.1.2",
     "gulp-sass": "^3.0.0",
+    "gulp-useref": "^3.1.2",
     "run-sequence": "^1.2.2"
   }
 }
