--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp": "^3.9.1",
     "gulp-cssnano": "^2.1.2",
     "gulp-sass": "^3.0.0",
+    "gulp-uglify": "^2.0.1",
     "gulp-useref": "^3.1.2",
     "run-sequence": "^1.2.2"
   }
