--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "devDependencies": {
     "browser-sync": "^2.18.5",
     "gulp": "^3.9.1",
+    "gulp-cache": "^0.4.5",
     "gulp-cssnano": "^2.1.2",
+    "gulp-imagemin": "^3.1.1",
     "gulp-sass": "^3.0.0",
     "gulp-uglify": "^2.0.1",
     "gulp-useref": "^3.1.2",
