--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/nigelpain/photography-site#readme",
   "devDependencies": {
     "browser-sync": "^2.18.5",
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-cache": "^0.4.5",
     "gulp-cssnano": "^2.1.2",
