--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-cache": "^0.4.5",
     "gulp-cssnano": "^2.1.2",
     "gulp-imagemin": "^3.1.1",
+    "gulp-nunjucks-render": "^2.0.0",
     "gulp-sass": "^3.0.0",
     "gulp-uglify": "^2.0.1",
     "gulp-useref": "^3.1.2",
