--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My photography and web design website",
   "main": "index.js",
   "resolutions": {
-    "natives": "1.1.3"
+    "natives": "^1.1.6"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
