--- a/package.json
+++ b/package.json
@@ -20,16 +20,15 @@
   },
   "homepage": "https://github.com/nigelpain/photography-site#readme",
   "devDependencies": {
-    "browser-sync": "^2.24.4",
-    "del": "^2.2.2",
-    "gulp": "^3.9.1",
-    "gulp-cache": "^0.4.5",
-    "gulp-cssnano": "^2.1.3",
-    "gulp-imagemin": "^3.1.1",
-    "gulp-nunjucks-render": "^2.0.0",
-    "gulp-sass": "^3.2.1",
-    "gulp-uglify": "^2.0.1",
-    "gulp-useref": "^3.1.5",
-    "run-sequence": "^1.2.2"
+    "browser-sync": "2.26.7",
+    "del": "5.1.0",
+    "gulp": "4.0.2",
+    "gulp-cache": "1.1.3",
+    "gulp-cssnano": "2.1.3",
+    "gulp-imagemin": "6.1.0",
+    "gulp-nunjucks-render": "2.2.3",
+    "gulp-sass": "4.0.2",
+    "gulp-uglify": "3.0.2",
+    "gulp-useref": "3.1.6"
   }
 }
